Bug 738 - RELRO crash when no standard library search dirs exist
Summary: RELRO crash when no standard library search dirs exist
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.3.4
: P2 normal
Target Milestone: ---
Assignee: Roland McGrath
URL:
Keywords:
Depends on:
Blocks: libc235
  Show dependency treegraph
 
Reported: 2005-02-16 04:47 UTC by Roland McGrath
Modified: 2018-04-20 13:35 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:
Project(s) to access:
ssh public key:
fweimer: security-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roland McGrath 2005-02-16 04:47:25 UTC
This trunk change is needed on the 2.3 branch.

2005-01-07  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (open_path): If rtld_search_dirs is in RELRO segment,
	avoid writing to it if none of the standard search directories exist.
Comment 1 Sourceware Commits 2005-02-16 11:19:23 UTC
Subject: Bug 738

CVSROOT:	/cvs/glibc
Module name:	libc
Branch: 	glibc-2_3-branch
Changes by:	roland@sources.redhat.com	2005-02-16 11:18:44

Modified files:
	elf            : dl-load.c 

Log message:
	2005-01-07  Jakub Jelinek  <jakub@redhat.com>
	
	[BZ #738]
	* elf/dl-load.c (open_path): If rtld_search_dirs is in RELRO segment,
	avoid writing to it if none of the standard search directories exist.

Patches:
http://sources.redhat.com/cgi-bin/cvsweb.cgi/libc/elf/dl-load.c.diff?cvsroot=glibc&only_with_tag=glibc-2_3-branch&r1=1.254&r2=1.254.2.1

Comment 2 Roland McGrath 2005-04-05 23:59:33 UTC
These changes are in the 2.3 branch as well as the trunk now.