2005-01-07  Jakub Jelinek  <jakub@redhat.com>

[BZ #738]
	* elf/dl-load.c (open_path): If rtld_search_dirs is in RELRO segment,
	avoid writing to it if none of the standard search directories exist.